@startuml

class CellImpl {
}
class FormulaCompiler{
}

class ExpressionCompiler{
}

class VariableWrapper{
}

class Variable{
    -String name;
    -Value value;
    +create(variableName, 0.0);
    +setVariableValue (rightOp.toDouble())
}

class Formula{
}

class Block{
}

class Attribution{
}


ExpressionCompiler --> Variable
ExpressionCompiler -->Attribution
ExpressionCompiler --> Block
VariableWrapper --> Variable
FormulaCompiler --> VariableWrapper
FormulaCompiler --> ExpressionCompiler
FormulaCompiler --> Formula
CellImpl --> FormulaCompiler
@enduml